--- a/test/test_morton.ipynb
+++ b/test/test_morton.ipynb
@@ -40,9 +40,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "a2ab2f58",
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a0e8b6e",
    "metadata": {},
+   "outputs": [],
    "source": [
     "input_file = 'data/crash_data_30000.csv'\n",
     "rect_file1 = 'test_morton/zindex_rects.csv'\n",
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "277c1d8e",
    "metadata": {},
    "outputs": [
@@ -106,7 +108,7 @@
     "    r = (row.lx, row.ly, row.ux, row.uy)\n",
     "    plt.gca().add_patch(Rectangle((r[0], r[1]), r[2]-r[0], r[3]-r[1], fill=None, alpha=1))\n",
     "    \n",
-    "plt.savefig(\"test_morton/tree-rectangles.png\", format='png', bbox_inches='tight')"
+    "#plt.savefig(\"test_morton/tree-rectangles.png\", format='png', bbox_inches='tight')"
    ]
   },
   {
