--- a/test/test_query_verification.ipynb
+++ b/test/test_query_verification.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "91e6eab0",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "2e544b4a",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "61e15e1d",
    "metadata": {
     "scrolled": true
@@ -337,15 +337,15 @@
       "\\toprule\n",
       "fraction &  avg\\_returned &  avg\\_matching &  noise &  avg\\_query &  avg\\_verif \\\\\n",
       "\\midrule\n",
-      "     10\\% &          6186 &          2978 &  0.519 &      0.623 &      4.336 \\\\\n",
-      "     20\\% &          9419 &          6014 &  0.362 &      0.903 &      6.807 \\\\\n",
-      "     30\\% &         12952 &          8991 &  0.306 &      1.250 &      9.956 \\\\\n",
-      "     40\\% &         16512 &         12013 &  0.272 &      1.621 &     12.585 \\\\\n",
-      "     50\\% &         19132 &         15033 &  0.214 &      1.863 &     14.718 \\\\\n",
-      "     60\\% &         21377 &         18019 &  0.157 &      2.098 &     17.342 \\\\\n",
-      "     70\\% &         24440 &         20970 &  0.142 &      2.370 &     19.832 \\\\\n",
-      "     80\\% &         26393 &         24014 &  0.090 &      2.556 &     21.617 \\\\\n",
-      "     90\\% &         29001 &         27013 &  0.069 &      2.821 &     23.893 \\\\\n",
+      "     10\\% &          6186 &          2978 &  0.519 &      0.120 &      2.810 \\\\\n",
+      "     20\\% &          9419 &          6014 &  0.362 &      0.187 &      4.429 \\\\\n",
+      "     30\\% &         12952 &          8991 &  0.306 &      0.247 &      6.023 \\\\\n",
+      "     40\\% &         16512 &         12013 &  0.272 &      0.314 &      7.629 \\\\\n",
+      "     50\\% &         19132 &         15033 &  0.214 &      0.360 &      8.871 \\\\\n",
+      "     60\\% &         21377 &         18019 &  0.157 &      0.398 &     10.099 \\\\\n",
+      "     70\\% &         24440 &         20970 &  0.142 &      0.449 &     11.484 \\\\\n",
+      "     80\\% &         26393 &         24014 &  0.090 &      0.515 &     12.438 \\\\\n",
+      "     90\\% &         29001 &         27013 &  0.069 &      0.528 &     13.551 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "2c18cd8c",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "c6671059",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "181be5a6",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "ec5bb567",
    "metadata": {
     "scrolled": false
@@ -522,15 +522,15 @@
       "\\toprule\n",
       "fraction &  avg\\_returned &  avg\\_matching &  noise &  avg\\_query &  avg\\_verif \\\\\n",
       "\\midrule\n",
-      "      1\\% &          1449 &           300 &  0.793 &      0.127 &      0.884 \\\\\n",
-      "      2\\% &          2003 &           601 &  0.700 &      0.164 &      1.190 \\\\\n",
-      "      3\\% &          2315 &           897 &  0.613 &      0.212 &      1.484 \\\\\n",
-      "      4\\% &          2603 &          1198 &  0.540 &      0.245 &      1.744 \\\\\n",
-      "      5\\% &          3105 &          1499 &  0.517 &      0.296 &      2.154 \\\\\n",
-      "      6\\% &          3701 &          1798 &  0.514 &      0.353 &      2.478 \\\\\n",
-      "      7\\% &          4129 &          2099 &  0.492 &      0.401 &      2.846 \\\\\n",
-      "      8\\% &          4578 &          2399 &  0.476 &      0.447 &      3.172 \\\\\n",
-      "      9\\% &          5528 &          2701 &  0.511 &      0.525 &      3.678 \\\\\n",
+      "      1\\% &          1449 &           300 &  0.793 &      0.033 &      0.631 \\\\\n",
+      "      2\\% &          2003 &           601 &  0.700 &      0.044 &      0.885 \\\\\n",
+      "      3\\% &          2315 &           897 &  0.613 &      0.047 &      1.005 \\\\\n",
+      "      4\\% &          2603 &          1198 &  0.540 &      0.051 &      1.112 \\\\\n",
+      "      5\\% &          3105 &          1499 &  0.517 &      0.062 &      1.363 \\\\\n",
+      "      6\\% &          3701 &          1798 &  0.514 &      0.084 &      1.897 \\\\\n",
+      "      7\\% &          4129 &          2099 &  0.492 &      0.079 &      1.832 \\\\\n",
+      "      8\\% &          4578 &          2399 &  0.476 &      0.099 &      2.257 \\\\\n",
+      "      9\\% &          5528 &          2701 &  0.511 &      0.111 &      2.459 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -570,16 +570,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ed3d6dfc",
+   "execution_count": 5,
+   "id": "4e52323e",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_queries = 200\n",
     "fq = 0.2\n",
+    "query_df = pd.read_csv('data/random_queries.csv')\n",
     "q_part = queries_with_fraction(query_df, fq-0.01, fq+0.01)\n",
     "q_part = q_part.sample(n=n_queries)\n",
-    "q_part.to_csv('data/random_queries_test_capacity.csv'.format(i*10), index=False)"
+    "q_part.to_csv('data/random_queries_test_capacity.csv', index=False)"
    ]
   },
   {
@@ -652,16 +653,16 @@
       "\\toprule\n",
       " capacity &  avg\\_returned &  avg\\_matching &  noise &  avg\\_query &  avg\\_verif \\\\\n",
       "\\midrule\n",
-      "        4 &          6642 &          6000 &  0.097 &      1.358 &     11.505 \\\\\n",
-      "        8 &          7609 &          6000 &  0.211 &      1.000 &      7.623 \\\\\n",
-      "       16 &          9581 &          6000 &  0.374 &      0.931 &      6.881 \\\\\n",
-      "       32 &         13607 &          6000 &  0.559 &      1.206 &      7.409 \\\\\n",
-      "       64 &         19470 &          6000 &  0.692 &      1.512 &      9.393 \\\\\n",
-      "      128 &         21480 &          6000 &  0.721 &      1.606 &      9.829 \\\\\n",
-      "      256 &         30000 &          6000 &  0.800 &      2.224 &     11.881 \\\\\n",
-      "      512 &         30000 &          6000 &  0.800 &      2.280 &     11.888 \\\\\n",
-      "     1024 &         30000 &          6000 &  0.800 &      2.162 &     11.861 \\\\\n",
-      "     2048 &         30000 &          6000 &  0.800 &      2.074 &     11.890 \\\\\n",
+      "        4 &          6608 &          5984 &  0.094 &      1.280 &      9.689 \\\\\n",
+      "        8 &          7560 &          5984 &  0.208 &      0.938 &      6.454 \\\\\n",
+      "       16 &          9576 &          5984 &  0.375 &      0.876 &      6.150 \\\\\n",
+      "       32 &         13615 &          5984 &  0.560 &      1.150 &      6.999 \\\\\n",
+      "       64 &         19322 &          5984 &  0.690 &      1.460 &      8.806 \\\\\n",
+      "      128 &         22217 &          5984 &  0.731 &      1.522 &      9.349 \\\\\n",
+      "      256 &         30000 &          5984 &  0.801 &      2.017 &     11.083 \\\\\n",
+      "      512 &         30000 &          5984 &  0.801 &      2.144 &     11.166 \\\\\n",
+      "     1024 &         30000 &          5984 &  0.801 &      2.025 &     11.014 \\\\\n",
+      "     2048 &         30000 &          5984 &  0.801 &      1.984 &     10.855 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
