--- a/test/test_query_verification.ipynb
+++ b/test/test_query_verification.ipynb
@@ -569,11 +569,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4e52323e",
+   "cell_type": "raw",
+   "id": "44d03835",
    "metadata": {},
-   "outputs": [],
    "source": [
     "n_queries = 200\n",
     "fq = 0.2\n",
@@ -585,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "63d269e6",
    "metadata": {},
    "outputs": [
@@ -593,17 +591,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing capacity = 4...\n",
-      "Testing capacity = 8...\n",
-      "Testing capacity = 16...\n",
-      "Testing capacity = 32...\n",
-      "Testing capacity = 64...\n",
-      "Testing capacity = 128...\n",
-      "Testing capacity = 256...\n",
-      "Testing capacity = 512...\n",
-      "Testing capacity = 1024...\n",
-      "Testing capacity = 2048...\n",
-      "Done!\n"
+      "Testing capacity = 4...\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command '['./TestQuery', 'test/data/crash_data_30000.csv', 'test/data/random_queries_test_capacity.csv', '4']' died with <Signals.SIGSEGV: 11>.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-1ae586fd0288>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Testing capacity = {}...'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'./TestQuery'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcapture_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheck\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mlines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mavg_retur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m':'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    510\u001b[0m         \u001b[0mretcode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    511\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mretcode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 512\u001b[0;31m             raise CalledProcessError(retcode, process.args,\n\u001b[0m\u001b[1;32m    513\u001b[0m                                      output=stdout, stderr=stderr)\n\u001b[1;32m    514\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mCompletedProcess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command '['./TestQuery', 'test/data/crash_data_30000.csv', 'test/data/random_queries_test_capacity.csv', '4']' died with <Signals.SIGSEGV: 11>."
      ]
     }
    ],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "4e0cac91",
    "metadata": {
     "scrolled": false
@@ -653,16 +653,16 @@
       "\\toprule\n",
       " capacity &  avg\\_returned &  avg\\_matching &  noise &  avg\\_query &  avg\\_verif \\\\\n",
       "\\midrule\n",
-      "        4 &          6608 &          5984 &  0.094 &      1.280 &      9.689 \\\\\n",
-      "        8 &          7560 &          5984 &  0.208 &      0.938 &      6.454 \\\\\n",
-      "       16 &          9576 &          5984 &  0.375 &      0.876 &      6.150 \\\\\n",
-      "       32 &         13615 &          5984 &  0.560 &      1.150 &      6.999 \\\\\n",
-      "       64 &         19322 &          5984 &  0.690 &      1.460 &      8.806 \\\\\n",
-      "      128 &         22217 &          5984 &  0.731 &      1.522 &      9.349 \\\\\n",
-      "      256 &         30000 &          5984 &  0.801 &      2.017 &     11.083 \\\\\n",
-      "      512 &         30000 &          5984 &  0.801 &      2.144 &     11.166 \\\\\n",
-      "     1024 &         30000 &          5984 &  0.801 &      2.025 &     11.014 \\\\\n",
-      "     2048 &         30000 &          5984 &  0.801 &      1.984 &     10.855 \\\\\n",
+      "        4 &          6604 &          5985 &  0.094 &      1.236 &      9.506 \\\\\n",
+      "        8 &          7544 &          5985 &  0.207 &      0.935 &      6.443 \\\\\n",
+      "       16 &          9436 &          5985 &  0.366 &      0.851 &      6.091 \\\\\n",
+      "       32 &         13408 &          5985 &  0.554 &      1.069 &      6.678 \\\\\n",
+      "       64 &         18722 &          5985 &  0.680 &      1.328 &      8.425 \\\\\n",
+      "      128 &         21889 &          5985 &  0.727 &      1.489 &      9.222 \\\\\n",
+      "      256 &         30000 &          5985 &  0.800 &      2.004 &     11.099 \\\\\n",
+      "      512 &         30000 &          5985 &  0.800 &      2.110 &     11.126 \\\\\n",
+      "     1024 &         30000 &          5985 &  0.800 &      2.017 &     11.025 \\\\\n",
+      "     2048 &         30000 &          5985 &  0.800 &      2.006 &     10.918 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
