--- a/test/data_preparation.ipynb
+++ b/test/data_preparation.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "a3be5ca6",
    "metadata": {},
    "outputs": [
@@ -212,8 +212,8 @@
     "plt.xlabel(\"x\")\n",
     "plt.ylabel(\"y\")\n",
     "#plt.title(\"Car crash events in South Australia (2012-2020)\", y=1.05)\n",
-    "plt.scatter(df.x, df.y, marker=\".\", color='gray')\n",
-    "plt.savefig(\"data/distribution.png\", format='png', bbox_inches='tight')"
+    "plt.scatter(df.x, df.y, marker=\".\", color='gray', rasterized=True)\n",
+    "plt.savefig(\"data/distribution.pdf\", format='pdf', dpi=500, bbox_inches='tight')"
    ]
   },
   {
@@ -240,38 +240,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "df87092d",
+   "cell_type": "raw",
+   "id": "1393871a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1000, 5125, 9250, 13375, 17500, 21625, 25750, 29875, 34000, 38125, 42250, 46375, 50500, 54625, 58750, 62875, 67000, 71125, 75250, 79375, 83500, 87625, 91750, 95875, 100000]\n"
-     ]
-    }
-   ],
    "source": [
     "sizes = [int(x) for x in np.linspace(1000, 100000, 25)]\n",
     "print(sizes)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "fa182c51",
+   "cell_type": "raw",
+   "id": "3ade734f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    }
-   ],
    "source": [
     "for m in sizes:\n",
     "    sampled_df = df.sample(n=m).reset_index(drop=True)\n",
@@ -288,19 +268,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "56479e30",
+   "cell_type": "raw",
+   "id": "b99b4232",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    }
-   ],
    "source": [
     "m = 30000\n",
     "sampled_df = df.sample(n=m).reset_index(drop=True)\n",
