--- a/test/test_query_verification.ipynb
+++ b/test/test_query_verification.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "91e6eab0",
    "metadata": {},
    "outputs": [],
@@ -276,28 +276,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "2e544b4a",
+   "cell_type": "raw",
+   "id": "1a0562c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing fraction = 10%...\n",
-      "Testing fraction = 20%...\n",
-      "Testing fraction = 30%...\n",
-      "Testing fraction = 40%...\n",
-      "Testing fraction = 50%...\n",
-      "Testing fraction = 60%...\n",
-      "Testing fraction = 70%...\n",
-      "Testing fraction = 80%...\n",
-      "Testing fraction = 90%...\n",
-      "Done!\n"
-     ]
-    }
-   ],
    "source": [
     "f = open(output_file, 'w')\n",
     "f.write('fraction,avg_returned,avg_matching,avg_query,avg_verif\\n')\n",
@@ -323,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "61e15e1d",
    "metadata": {
     "scrolled": true
@@ -337,15 +318,15 @@
       "\\toprule\n",
       "fraction &  avg\\_returned &  avg\\_matching &  noise &  avg\\_query &  avg\\_verif \\\\\n",
       "\\midrule\n",
-      "     10\\% &          6186 &          2978 &  0.519 &      0.120 &      2.810 \\\\\n",
-      "     20\\% &          9419 &          6014 &  0.362 &      0.187 &      4.429 \\\\\n",
-      "     30\\% &         12952 &          8991 &  0.306 &      0.247 &      6.023 \\\\\n",
-      "     40\\% &         16512 &         12013 &  0.272 &      0.314 &      7.629 \\\\\n",
-      "     50\\% &         19132 &         15033 &  0.214 &      0.360 &      8.871 \\\\\n",
-      "     60\\% &         21377 &         18019 &  0.157 &      0.398 &     10.099 \\\\\n",
-      "     70\\% &         24440 &         20970 &  0.142 &      0.449 &     11.484 \\\\\n",
-      "     80\\% &         26393 &         24014 &  0.090 &      0.515 &     12.438 \\\\\n",
-      "     90\\% &         29001 &         27013 &  0.069 &      0.528 &     13.551 \\\\\n",
+      "     10\\% &          6186 &          2978 &  0.519 &      0.545 &      3.655 \\\\\n",
+      "     20\\% &          9419 &          6014 &  0.362 &      0.846 &      6.134 \\\\\n",
+      "     30\\% &         12952 &          8991 &  0.306 &      1.174 &      8.701 \\\\\n",
+      "     40\\% &         16512 &         12013 &  0.272 &      1.514 &     11.547 \\\\\n",
+      "     50\\% &         19132 &         15033 &  0.214 &      1.732 &     13.355 \\\\\n",
+      "     60\\% &         21377 &         18019 &  0.157 &      1.933 &     15.463 \\\\\n",
+      "     70\\% &         24440 &         20970 &  0.142 &      2.171 &     17.495 \\\\\n",
+      "     80\\% &         26393 &         24014 &  0.090 &      2.319 &     18.866 \\\\\n",
+      "     90\\% &         29001 &         27013 &  0.069 &      2.575 &     20.770 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -448,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "c6671059",
    "metadata": {},
    "outputs": [],
@@ -460,28 +441,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "181be5a6",
+   "cell_type": "raw",
+   "id": "46353bfe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing fraction = 1%...\n",
-      "Testing fraction = 2%...\n",
-      "Testing fraction = 3%...\n",
-      "Testing fraction = 4%...\n",
-      "Testing fraction = 5%...\n",
-      "Testing fraction = 6%...\n",
-      "Testing fraction = 7%...\n",
-      "Testing fraction = 8%...\n",
-      "Testing fraction = 9%...\n",
-      "Done!\n"
-     ]
-    }
-   ],
    "source": [
     "f = open(output_file, 'w')\n",
     "f.write('fraction,avg_returned,avg_matching,avg_query,avg_verif\\n')\n",
@@ -508,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "ec5bb567",
    "metadata": {
     "scrolled": false
@@ -522,15 +484,15 @@
       "\\toprule\n",
       "fraction &  avg\\_returned &  avg\\_matching &  noise &  avg\\_query &  avg\\_verif \\\\\n",
       "\\midrule\n",
-      "      1\\% &          1449 &           300 &  0.793 &      0.033 &      0.631 \\\\\n",
-      "      2\\% &          2003 &           601 &  0.700 &      0.044 &      0.885 \\\\\n",
-      "      3\\% &          2315 &           897 &  0.613 &      0.047 &      1.005 \\\\\n",
-      "      4\\% &          2603 &          1198 &  0.540 &      0.051 &      1.112 \\\\\n",
-      "      5\\% &          3105 &          1499 &  0.517 &      0.062 &      1.363 \\\\\n",
-      "      6\\% &          3701 &          1798 &  0.514 &      0.084 &      1.897 \\\\\n",
-      "      7\\% &          4129 &          2099 &  0.492 &      0.079 &      1.832 \\\\\n",
-      "      8\\% &          4578 &          2399 &  0.476 &      0.099 &      2.257 \\\\\n",
-      "      9\\% &          5528 &          2701 &  0.511 &      0.111 &      2.459 \\\\\n",
+      "      1\\% &          1449 &           300 &  0.793 &      0.113 &      0.781 \\\\\n",
+      "      2\\% &          2003 &           601 &  0.700 &      0.156 &      1.100 \\\\\n",
+      "      3\\% &          2315 &           897 &  0.613 &      0.190 &      1.383 \\\\\n",
+      "      4\\% &          2603 &          1198 &  0.540 &      0.221 &      1.600 \\\\\n",
+      "      5\\% &          3105 &          1499 &  0.517 &      0.275 &      1.922 \\\\\n",
+      "      6\\% &          3701 &          1798 &  0.514 &      0.328 &      2.280 \\\\\n",
+      "      7\\% &          4129 &          2099 &  0.492 &      0.364 &      2.585 \\\\\n",
+      "      8\\% &          4578 &          2399 &  0.476 &      0.407 &      2.827 \\\\\n",
+      "      9\\% &          5528 &          2701 &  0.511 &      0.488 &      3.321 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -570,7 +532,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "44d03835",
+   "id": "2c5b4060",
    "metadata": {},
    "source": [
     "n_queries = 200\n",
@@ -583,27 +545,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "63d269e6",
+   "execution_count": 8,
+   "id": "88f32112",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing capacity = 4...\n"
-     ]
-    },
-    {
-     "ename": "CalledProcessError",
-     "evalue": "Command '['./TestQuery', 'test/data/crash_data_30000.csv', 'test/data/random_queries_test_capacity.csv', '4']' died with <Signals.SIGSEGV: 11>.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-1ae586fd0288>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Testing capacity = {}...'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'./TestQuery'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcapture_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheck\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mlines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mavg_retur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m':'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    510\u001b[0m         \u001b[0mretcode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    511\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mretcode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 512\u001b[0;31m             raise CalledProcessError(retcode, process.args,\n\u001b[0m\u001b[1;32m    513\u001b[0m                                      output=stdout, stderr=stderr)\n\u001b[1;32m    514\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mCompletedProcess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mCalledProcessError\u001b[0m: Command '['./TestQuery', 'test/data/crash_data_30000.csv', 'test/data/random_queries_test_capacity.csv', '4']' died with <Signals.SIGSEGV: 11>."
+      "Testing capacity = 4...\n",
+      "Testing capacity = 8...\n",
+      "Testing capacity = 16...\n",
+      "Testing capacity = 32...\n",
+      "Testing capacity = 64...\n",
+      "Testing capacity = 128...\n",
+      "Testing capacity = 256...\n",
+      "Testing capacity = 512...\n",
+      "Testing capacity = 1024...\n",
+      "Testing capacity = 2048...\n",
+      "Done!\n"
      ]
     }
    ],
@@ -639,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "4e0cac91",
    "metadata": {
     "scrolled": false
@@ -653,16 +613,16 @@
       "\\toprule\n",
       " capacity &  avg\\_returned &  avg\\_matching &  noise &  avg\\_query &  avg\\_verif \\\\\n",
       "\\midrule\n",
-      "        4 &          6604 &          5985 &  0.094 &      1.236 &      9.506 \\\\\n",
-      "        8 &          7544 &          5985 &  0.207 &      0.935 &      6.443 \\\\\n",
-      "       16 &          9436 &          5985 &  0.366 &      0.851 &      6.091 \\\\\n",
-      "       32 &         13408 &          5985 &  0.554 &      1.069 &      6.678 \\\\\n",
-      "       64 &         18722 &          5985 &  0.680 &      1.328 &      8.425 \\\\\n",
-      "      128 &         21889 &          5985 &  0.727 &      1.489 &      9.222 \\\\\n",
-      "      256 &         30000 &          5985 &  0.800 &      2.004 &     11.099 \\\\\n",
-      "      512 &         30000 &          5985 &  0.800 &      2.110 &     11.126 \\\\\n",
-      "     1024 &         30000 &          5985 &  0.800 &      2.017 &     11.025 \\\\\n",
-      "     2048 &         30000 &          5985 &  0.800 &      2.006 &     10.918 \\\\\n",
+      "        4 &          6624 &          6004 &  0.094 &      1.226 &      9.898 \\\\\n",
+      "        8 &          7553 &          6004 &  0.205 &      0.875 &      6.385 \\\\\n",
+      "       16 &          9530 &          6004 &  0.370 &      0.832 &      6.062 \\\\\n",
+      "       32 &         13535 &          6004 &  0.556 &      1.056 &      6.660 \\\\\n",
+      "       64 &         19076 &          6004 &  0.685 &      1.336 &      8.493 \\\\\n",
+      "      128 &         21808 &          6004 &  0.725 &      1.458 &      9.167 \\\\\n",
+      "      256 &         30000 &          6004 &  0.800 &      1.977 &     11.069 \\\\\n",
+      "      512 &         30000 &          6004 &  0.800 &      2.077 &     11.079 \\\\\n",
+      "     1024 &         30000 &          6004 &  0.800 &      1.990 &     10.973 \\\\\n",
+      "     2048 &         30000 &          6004 &  0.800 &      1.943 &     10.850 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
